1.Added repositories to code structure. These handle all the conditions regarding api usage. 2.Improved code quality. 3.Added resource strings to UI in order follow proper practices. 4.Removed function getWeather: this function is now combined with getWeatherByLocation to improve code structure and overall readability of the code.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,13 +12,16 @@
         android:layout_height="50dp"
         android:layout_marginTop="39dp"
         android:layout_marginBottom="95dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:ems="10"
-        android:hint="Enter Zip Code"
+        android:hint="@string/string_zip_enter"
         android:inputType="number"
         app:layout_constraintBottom_toTopOf="@+id/tvTemp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:autofillHints="" />
 
     <TextView
         android:id="@+id/tvTemp"
@@ -26,8 +29,8 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="52dp"
         android:gravity="center"
-        android:text="0"
-        android:textSize="50dp"
+        android:text="@string/string_placeholder"
+        android:textSize="50sp"
         app:layout_constraintBottom_toTopOf="@+id/labelFeels"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,7 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="83dp"
         android:gravity="center"
-        android:text="0"
+        android:text="@string/string_placeholder"
         android:textSize="40sp"
         app:layout_constraintBottom_toTopOf="@+id/tvlocation"
         app:layout_constraintEnd_toEndOf="parent"
@@ -53,7 +56,8 @@
         android:layout_marginBottom="33dp"
         android:gravity="start"
         android:paddingStart="50dp"
-        android:text="0 max"
+        android:paddingEnd="50dp"
+        android:text="@string/string_placeholder"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="@+id/tvlocation"
         app:layout_constraintEnd_toEndOf="parent"
@@ -65,7 +69,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:gravity="center"
-        android:text="feels like"
+        android:text="@string/string_placeholder"
         android:textSize="25sp"
         app:layout_constraintBottom_toTopOf="@+id/tvFeelsLike"
         app:layout_constraintEnd_toEndOf="parent"
@@ -78,11 +82,11 @@
         android:layout_height="50dp"
         android:layout_marginBottom="74dp"
         android:background="@color/black"
-        android:text="Refresh"
+        android:text="@string/string_button_refresh"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvConditions" />
+        app:layout_constraintTop_toBottomOf="@+id/tvPressure" />
 
     <TextView
         android:id="@+id/tvlocation"
@@ -91,9 +95,10 @@
         android:layout_marginBottom="33dp"
         android:gravity="start"
         android:paddingStart="50dp"
-        android:text="location: none"
+        android:paddingEnd="50dp"
+        android:text="@string/string_placeholder"
         android:textSize="25sp"
-        app:layout_constraintBottom_toTopOf="@+id/tvConditions"
+        app:layout_constraintBottom_toTopOf="@+id/tvPressure"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvFeelsLike" />
@@ -104,20 +109,22 @@
         android:layout_height="wrap_content"
         android:gravity="start"
         android:paddingStart="50dp"
-        android:text="humidity: 0%"
+        android:paddingEnd="50dp"
+        android:text="@string/string_placeholder"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvlocation" />
 
     <TextView
-        android:id="@+id/tvConditions"
+        android:id="@+id/tvPressure"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="23dp"
         android:gravity="start"
         android:paddingStart="50dp"
-        android:text="conditions: none"
+        android:paddingEnd="50dp"
+        android:text="@string/string_placeholder"
         android:textSize="25sp"
         app:layout_constraintBottom_toTopOf="@+id/btnRefresh"
         app:layout_constraintEnd_toEndOf="parent"
