--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,21 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center_horizontal"
+    android:background="@color/black"
     tools:context=".MainActivity">
 
-    <EditText
-        android:id="@+id/etZipCode"
-        android:layout_width="350dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="0dp"
-        android:ems="10"
-        android:hint="@string/string_zip_enter"
-        android:inputType="number"
-        android:autofillHints="" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/etZipCode"
+            android:layout_width="280dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginStart="7dp"
+            android:layout_marginEnd="7dp"
+            android:ems="10"
+            android:hint="@string/string_zip_enter"
+            android:textColorHint="@color/white"
+            android:inputType="number"
+            android:autofillHints=""
+            android:textColor="@color/white"
+            android:background="@drawable/edit_text_underline"/>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/spinner_border"
+            android:layout_margin="5dp"
+            android:layout_weight="1">
+
+            <Spinner
+                android:id="@+id/spinnerOptions"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_marginTop="15dp"
+                android:contentDescription="@string/string_f"
+                android:background="@drawable/spinner_background"/>
+
+        </LinearLayout>
+    </LinearLayout>
 
     <Space
         android:layout_width="match_parent"
@@ -28,7 +59,9 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="@string/string_placeholder"
-        android:textSize="45sp" />
+        android:textColor="@color/white"
+        android:textSize="45sp"
+        app:drawableStartCompat="@drawable/icon_temp" />
 
     <TextView
         android:id="@+id/tvFeelsLike"
@@ -36,14 +69,13 @@
         android:layout_height="60dp"
         android:gravity="center"
         android:text="@string/string_placeholder"
+        android:textColor="@color/white"
         android:textSize="20sp" />
 
     <Space
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.3"/>
-
-
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -60,7 +92,9 @@
             android:layout_height="wrap_content"
             android:gravity="start"
             android:text="@string/string_placeholder"
-            android:textSize="25sp" />
+            android:textColor="@color/white"
+            android:textSize="25sp"
+            app:drawableStartCompat="@drawable/icon_location" />
 
         <TextView
             android:id="@+id/tvMaxTemp"
@@ -68,6 +102,7 @@
             android:layout_height="wrap_content"
             android:gravity="start"
             android:text="@string/string_placeholder"
+            android:textColor="@color/white"
             android:textSize="20sp"
             android:layout_marginVertical="10dp"/>
 
@@ -83,6 +118,7 @@
                 android:layout_height="40dp"
                 android:gravity="start"
                 android:text="@string/string_placeholder"
+                android:textColor="@color/white"
                 android:textSize="20sp"
                 android:layout_marginStart="0dp"
                 android:layout_marginEnd="10dp"/>
@@ -93,14 +129,13 @@
                 android:layout_height="40dp"
                 android:gravity="start"
                 android:text="@string/string_placeholder"
+                android:textColor="@color/white"
                 android:textSize="20sp"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="0dp"/>
 
         </LinearLayout>
-
     </LinearLayout>
-
 
     <Space
         android:layout_width="match_parent"
@@ -109,10 +144,11 @@
 
     <Button
         android:id="@+id/btnRefresh"
-        android:layout_width="150dp"
-        android:layout_height="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="50dp"
         android:background="@color/black"
+        android:textSize="15sp"
         android:text="@string/string_button_refresh" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
